@@ -1,5 +1,8 @@
 Release Notes
 
+* 7/12/2016
+  * registering and deleting ES files in rucio
+
 * 7/8/2016
   * added jumbo job stuff
 
